<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/horizontalScroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/date"
            android:textSize="@dimen/table_text_size" />

        <TextView
            android:id="@+id/openTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/open"
            android:textSize="@dimen/table_text_size" />

        <TextView
            android:id="@+id/highTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/high"
            android:textSize="@dimen/table_text_size" />

        <TextView
            android:id="@+id/lowTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/low"
            android:textSize="@dimen/table_text_size" />

        <TextView
            android:id="@+id/closeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/close"
            android:textSize="@dimen/table_text_size" />

        <TextView
            android:id="@+id/volumeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/volume"
            android:textSize="@dimen/table_text_size" />

        <TextView
            android:id="@+id/adjcloseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/adj_close"
            android:textSize="@dimen/table_text_size" />

    </LinearLayout>
</HorizontalScrollView>

